--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 	</header>
 	<section id="portada"><!--portada-->
 		<h1>Guitarras Invisibles</h1><!-- titulo -->
-		<h3>Se la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
+		<h3 class="title-a">Se la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
 		<button>Conoce más</button><!-- boton -->
 	</section>
 	<section id="guitarras"><!-- guitarras -->
 		<h2>Nuestras guitarras</h2><!-- titulo -->
 		<article>
 			<img src="images/invie-acustica.png" width="200" alt="Guitarra Invie classic">
-			<h3>Invie Acustica</h3>
+			<h3 class="title-b">Invie Acustica</h3>
 			<ol>
 				<li>Estilo vintage</li>
 				<li>Madera Pura</li>
@@ -36,7 +36,7 @@
 		</article><!-- guitarra 1--> 
 		<article>
 			<img src="images/invie-classic.png" width="200" alt="Guitarra Clasica">
-			<h3>Invie Acustica</h3>
+			<h3 class="title-b">Invie Acustica</h3>
 			<ol>
 				<li>Estilo Vintage</li>
 				<li>Liviana</li>
