--- a/precios.html
+++ b/precios.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Precios - tus mejores guitarras</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" media="(max-width: 800px)" href="css/media-querie.css">
 </head>
 <body>
 	<header id="header" class="header contenedor"><!-- hedaer -->
