--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Invie - tus mejores guitarras</title>
 	<link rel="stylesheet" href="css/style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" media="(max-width: 800px)" href="css/media-querie.css">
 </head>
 <body>
@@ -103,3 +103,6 @@
 	</footer>
 </body>
 </html>
+<!-- 
+		cambiar icono cuando se haga click por medio de estas clases 
+		<span class="burguer-button icon-close"></span> -->
