--- a/precios.html
+++ b/precios.html
@@ -5,6 +5,7 @@
 	<title>Precios - tus mejores guitarras</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" media="(max-width: 800px)" href="css/media-querie.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
 <body>
 	<header id="header" class="header contenedor"><!-- hedaer -->
